--- a/reflect-perlin.html
+++ b/reflect-perlin.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+Copyright (c) 2015 gam0022
+Released under the MIT license
+http://opensource.org/licenses/mit-license.php
+-->
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
