--- a/sphere.html
+++ b/sphere.html
@@ -57,7 +57,7 @@ void main(void) {
     // 衝突した場合
     vec3 normal = getNormal(dPos);
     float diffuse = clamp(dot(lightDir, normal), 0.1, 1.0);
-    color = vec3(1.0, 1.0, 1.0) * diffuse;
+    color = vec3(0.0);//vec3(1.0, 1.0, 1.0) * diffuse;
   } else {
     // 衝突しなかった場合
     color = vec3(1.0);
