--- a/tdf_glsl.html
+++ b/tdf_glsl.html
@@ -58,9 +58,68 @@ uniform float time;
 uniform vec2 mouse;
 uniform vec2 resolution;
 
+uniform vec3 cameraPos;
+uniform vec3 cameraDir;
+
 const float EPS = 0.01;
 const float OFFSET = EPS * 100.0;
 const vec3 lightDir = vec3( -0.48666426339228763, 0.8111071056538127, -0.3244428422615251 );
+
+// Quote
+
+const float pi = 3.14159;
+const vec4 cHashA4 = vec4 (0., 1., 57., 58.);
+const vec3 cHashA3 = vec3 (1., 57., 113.);
+const float cHashM = 43758.54;
+
+float PrBox2Df (vec2 p, vec2 b)
+{
+  vec2 d = abs (p) - b;
+  return min (max (d.x, d.y), 0.) + length (max (d, 0.));
+}
+
+float PrCylAnDf (vec3 p, float r, float w, float h)
+{
+  return max (abs (length (p.xy) - r) - w, abs (p.z) - h);
+}
+
+mat3 vuMat;
+vec3 vuPos;
+float tCur, dstFar, chRingO, chRingI, vuVel, bxSize, chSize, qnStep;
+int idObj;
+
+float MBoxDf (vec3 p)
+{
+  vec4 q, q0;
+  const float mScale = 2.62;
+  const int nIter = 12;
+  q0 = vec4 (p, 1.);
+  q = q0;
+  for (int n = 0; n < nIter; n ++) {
+    q.xyz = clamp (q.xyz, -1., 1.) * 2. - q.xyz;
+    q = q * mScale / clamp (dot (q.xyz, q.xyz), 0.5, 1.) + q0;
+  }
+  return length (q.xyz) / abs (q.w);
+}
+
+float ObjDf (vec3 p)
+{
+  vec3 q;
+  float dMin, d, dm, tWid;
+  dMin = dstFar;
+  d = MBoxDf (p);
+  q = p;
+  q.y -= vuPos.y;
+  tWid = 0.7 * chSize;
+  dm = min (PrCylAnDf (q.xzy, chRingO, chSize, chSize),
+     PrCylAnDf (q.xzy, chRingI, tWid, chSize));
+  dm = min (min (dm, PrBox2Df (q.xy, vec2 (tWid, chSize))),
+     PrBox2Df (q.zy, vec2 (tWid, chSize)));
+  d = max (d, - dm);
+  if (d < dMin) { dMin = d;  idObj = 1; }
+  return dMin;
+}
+
 
 // distance functions
 vec3 onRep( vec3 p, float interval ) {
@@ -113,63 +172,16 @@ vec3 hsv2rgb( vec3 c ) {
 
 }
 
-//float sceneDist( vec3 p ) {
-//
-//	return min(
-//		sphereDist( p, 1.0 ),
-//		floorDist( p )
-//	);
-//
-//}
+float sceneDist( vec3 p ) {
 
-float PrBox2Df (vec2 p, vec2 b)
-{
-  vec2 d = abs (p) - b;
-  return min (max (d.x, d.y), 0.) + length (max (d, 0.));
-}
+	//return ObjDf( p );
+	return MBoxDf( p );
 
-float PrCylAnDf (vec3 p, float r, float w, float h)
-{
-  return max (abs (length (p.xy) - r) - w, abs (p.z) - h);
-}
+	//return min(
+	//	sphereDist( p, 1.0 ),
+	//	floorDist( p )
+	//);
 
-mat3 vuMat;
-vec3 gloPos[2], vuPos;
-float tCur, chRingO, chRingI, vuVel, bxSize, chSize, qnStep;
-int idObj;
-const float mScale = 2.62;
-const float dstFar = 30.;
-const float pi = 3.14159;
-
-float MBoxDf (vec3 p)
-{
-	vec4 q, q0;
-	const int nIter = 12;
-	q0 = vec4 (p, 1.);
-	q = q0;
-	for (int n = 0; n < nIter; n ++) {
-		q.xyz = clamp (q.xyz, -1., 1.) * 2. - q.xyz;
-		q = q * mScale / clamp (dot (q.xyz, q.xyz), 0.5, 1.) + q0;
-	}
-	return length (q.xyz) / abs (q.w);
-}
-
-float sceneDist (vec3 p)
-{
-	vec3 q;
-	float dMin, d, dm, tWid;
-	dMin = dstFar;
-	d = MBoxDf (p);
-	q = p;
-	q.y -= vuPos.y;
-	tWid = 0.9 * chSize;
-	dm = min (PrCylAnDf (q.xzy, chRingO, chSize, chSize),
-	 PrCylAnDf (q.xzy, chRingI, tWid, chSize));
-	dm = min (min (dm, PrBox2Df (q.xy, vec2 (tWid, chSize))),
-	 PrBox2Df (q.zy, vec2 (tWid, chSize)));
-	d = max (d, - dm);
-	if (d < dMin) { dMin = d;  idObj = 1; }
-		return dMin;
 }
 
 vec4 sceneColor( vec3 p ) {
@@ -261,9 +273,15 @@ void main(void) {
 	vec2 p = ( gl_FragCoord.xy * 2.0 - resolution ) / min( resolution.x, resolution.y );
 
 	// camera and ray
-	vec3 cPos  = vec3( mouse.x - 0.5,  mouse.y * 4.0, time * 0.01 );
-	vec3 cDir  = normalize( vec3( 0.0, -0.3, 1.0 ) );
-	vec3 cSide = normalize( cross( cDir, vec3( 0.0, 1.0 ,0.0 ) ) );
+	vec3 cPos, cDir;
+	if(true) {
+		cPos  = vec3( 2.6314728260040283, 1.0912302732467651, -5.0 + time );
+		cDir  = normalize( vec3( 0.0, 0.0, 1.0 ) );
+	} else {
+		cPos  = cameraPos;
+		cDir  = cameraDir;
+	}
+	vec3 cSide = normalize( cross( cDir, vec3( 1.0, 1.0 ,0.0 ) ) );
 	vec3 cUp   = normalize( cross( cSide, cDir ) );
 	float targetDepth = 1.3;
 	vec3 ray = normalize( cSide * p.x + cUp * p.y + cDir * targetDepth );
@@ -304,13 +322,14 @@ void main(void) {
 
 		<script src="js/three.min.js"></script>
 		<script src="js/controls/FlyControls.js"></script>
+		<script src="js/controls/OrbitControls.js"></script>
 
 		<script src="js/libs/stats.min.js"></script>
 		<script src="js/libs/dat.gui.min.js"></script>
 
 		<script>
 
-			var camera, dummyCamera, scene, controls, renderer;
+			var camera, dummyCamera, scene, flyControls, orbitControls, renderer;
 			var geometry, material, mesh;
 			var mouse = new THREE.Vector2( 0.5, 0.5 );
 			var canvas;
@@ -325,8 +344,8 @@ void main(void) {
 					window.open( canvas.toDataURL() );
 
 				},
-				freeCamera: false,
-				resolution: '512',
+				camera: "Orbit",
+				resolution: '256',
 			};
 
 			init();
@@ -335,16 +354,18 @@ void main(void) {
 			function init() {
 
 				scene = new THREE.Scene();
-				camera = new THREE.Camera();
+				camera = new THREE.PerspectiveCamera(35, 800/600);
 				dummyCamera = new THREE.Camera();
-				camera.lookAt( new THREE.Vector3( 0.0, -0.3, 1.0 ) );
+				camera.lookAt( new THREE.Vector3( 0.0, 0.0, 0.0 ) );
 
 				geometry = new THREE.PlaneBufferGeometry( 2.0, 2.0 );
 				material = new THREE.RawShaderMaterial( {
 					uniforms: {
-						resolution: { type: 'v2', value: new THREE.Vector2( 512, 512 ) },
+						resolution: { type: 'v2', value: new THREE.Vector2( config.resolution, config.resolution ) },
 						mouse: { type: 'v2', value: mouse },
 						time: { type: 'f', value: 0.0 },
+						cameraPos: { type: 'v3', value: camera.getWorldPosition() },
+						cameraDir: { type: 'v3', value: camera.getWorldDirection() },
 					},
 					vertexShader: document.getElementById( 'vertex_shader' ).textContent,
 					fragmentShader: document.getElementById( 'fragment_shader' ).textContent
@@ -354,23 +375,32 @@ void main(void) {
 
 				renderer = new THREE.WebGLRenderer();
 				//renderer.setPixelRatio( window.devicePixelRatio );
-				renderer.setSize( 512, 512 );
+				renderer.setSize( config.resolution, config.resolution );
 
 				canvas = renderer.domElement;
-				canvas.addEventListener( 'mousemove', onMouseMove );
+				//canvas.addEventListener( 'mousemove', onMouseMove );
 				window.addEventListener( 'resize', onWindowResize );
 				document.body.appendChild( canvas );
 
-				controls = new THREE.FlyControls( camera, canvas );
+				//flyControls = new THREE.FlyControls( camera, canvas );
+				//flyControls.autoForward = true;
+				//flyControls.dragToLook = false;
+				//flyControls.rollSpeed = Math.PI / 12;
+				//flyControls.movementSpeed = 0.1;
 
-				controls.autoForward = true;
-				controls.dragToLook = false;
-				controls.rollSpeed = Math.PI / 12;
-				controls.movementSpeed = 0.5;
+				orbitControls = new THREE.OrbitControls( camera, canvas );
+				orbitControls.enableDamping = false;
+				orbitControls.dampingFactor = 0.015;
+				orbitControls.enableZoom = true;
+				orbitControls.zoomSpeed = 0.1;
+				orbitControls.rotateSpeed = 0.8;
+				orbitControls.autoRotate = false;
+				orbitControls.autoRotateSpeed = 0.0;
+				orbitControls.target = new THREE.Vector3( 0.0, 0.0, 2.0 );
 
 				var gui = new dat.GUI();
 				gui.add( config, 'saveImage' ).name( 'Save Image' );
-				gui.add( config, 'freeCamera' ).name( 'Free Camera' );
+				gui.add( config, 'camera', [ 'Orbit', 'Fly' ] ).name( 'Camera' );
 				gui.add( config, 'resolution', [ '256', '512', '800', 'full' ] ).name( 'Resolution' ).onChange( function( value ) {
 
 					if ( value !== 'full' ) {
@@ -394,9 +424,13 @@ void main(void) {
 
 				stats.begin();
 
-				if ( config.freeCamera ) {
+				if ( config.camera === "Fly" ) {
 
-					controls.update( delta );
+					flyControls.update( delta );
+
+				} else if ( config.camera === "Orbit" ) {
+
+					orbitControls.update();
 
 				} else {
 
@@ -410,10 +444,19 @@ void main(void) {
 				material.uniforms.resolution.value = new THREE.Vector2( canvas.width, canvas.height );
 				material.uniforms.mouse.value = mouse;
 				material.uniforms.time.value = timestamp * 0.001;
+				material.uniforms.cameraPos.value = camera.getWorldPosition();
+				material.uniforms.cameraDir.value = camera.getWorldDirection();
 				renderer.render( scene, dummyCamera );
 
 				stats.end();
 				requestAnimationFrame( render );
+
+				var pos = camera.getWorldPosition();
+				var dir = camera.getWorldDirection();
+
+				document.getElementById( 'info' ).innerHTML = ""
+					+ pos.x + ", " + pos.y + ", " + pos.z + ". "
+					+ dir.x + ", " + dir.y + ", " + dir.z + ". ";
 
 			}
 
