--- a/tdf_glsl.html
+++ b/tdf_glsl.html
@@ -150,9 +150,57 @@ float sceneDist( vec3 p ) {
 
 }
 
+vec2 circuit(vec2 p)
+{
+	p = fract(p);
+	float r = 0.123;
+	float v = 0.0, g = 0.0;
+	r = fract(r * 9184.928);
+	float cp, d;
+	
+	d = p.x;
+	g += pow(clamp(1.0 - abs(d), 0.0, 1.0), 1000.0);
+	d = p.y;
+	g += pow(clamp(1.0 - abs(d), 0.0, 1.0), 1000.0);
+	d = p.x - 1.0;
+	g += pow(clamp(3.0 - abs(d), 0.0, 1.0), 1000.0);
+	d = p.y - 1.0;
+	g += pow(clamp(1.0 - abs(d), 0.0, 1.0), 10000.0);
+	
+	const int iter = 12;
+	for(int i = 0; i < iter; i ++)
+	{
+		cp = 0.5 + (r - 0.5) * 0.9;
+		d = p.x - cp;
+		g += pow(clamp(1.0 - abs(d), 0.0, 1.0), 200.0);
+		if(d > 0.0) {
+			r = fract(r * 4829.013);
+			p.x = (p.x - cp) / (1.0 - cp);
+			v += 1.0;
+		}
+		else {
+			r = fract(r * 1239.528);
+			p.x = p.x / cp;
+		}
+		p = p.yx;
+	}
+	v /= float(iter);
+	return vec2(g, v);
+}
+
 vec4 sceneColor( vec3 p ) {
 
-	return vec4( 0.5, 0.5, 0.8, sceneDist(p) );
+	vec2 uv = p.xz;
+	vec2 dg = circuit(uv);
+	float d = dg.x;
+	vec3 col1 = (0.2-vec3(max(min(d, 2.0)-1.0, 0.0)*2.0*0.25)) * vec3(1.0, 1.1, 1.3);
+	vec3 col2 = vec3(max(d-1.0, 0.0)*2.0*0.5) * vec3(1.0, 1.2, 1.6);
+
+	float f = max(0.5-mod(uv.y-uv.x*0.3+(time*0.4)+(dg.y*0.4), 2.5), 0.0)*5.0;
+	col2 *= f;
+	vec3 c = col1 + col2;
+
+	return vec4( c, sceneDist(p) );
 	//return minVec4(
 	//	// 3 * 6 / 2 = 9
 	//	vec4( hsv2rgb(vec3( ( p.z + p.x ) / 9.0, 1.0, 1.0 ) ), sphereDist( p, 1.0 ) ),
@@ -199,6 +247,7 @@ vec3 getRayColor( vec3 origin, vec3 ray, out vec3 p, out vec3 normal, out bool h
 	float dist;
 	float depth = 0.0;
 	p = origin;
+	int count = 0;
 
 	for ( int i = 0; i < 64; i++ ){
 
@@ -206,6 +255,7 @@ vec3 getRayColor( vec3 origin, vec3 ray, out vec3 p, out vec3 normal, out bool h
 		depth += dist;
 		p = origin + depth * ray;
 
+		count = i;
 		if ( abs(dist) < EPS ) break;
 
 	}
@@ -229,7 +279,7 @@ vec3 getRayColor( vec3 origin, vec3 ray, out vec3 p, out vec3 normal, out bool h
 
 	}
 
-	return color - pow( clamp( 0.05 * depth, 0.0, 0.6 ), 2.0 );
+	return color - pow( clamp( 0.01 * depth + 0.005 * float(count), 0.0, 0.6 ), 2.0 );
 
 }
 
