--- a/tdf_glsl.html
+++ b/tdf_glsl.html
@@ -192,15 +192,11 @@ vec4 sceneColor( vec3 p ) {
 
 	vec2 uv = p.xz;
 	vec2 dg = circuit(uv);
-	float d = dg.x;
-	vec3 col1 = (0.2-vec3(max(min(d, 2.0)-1.0, 0.0)*2.0*0.25)) * vec3(1.0, 1.1, 1.3);
-	vec3 col2 = vec3(max(d-1.0, 0.0)*2.0*0.5) * vec3(1.0, 1.2, 1.6);
 
-	float f = max(0.5-mod(uv.y-uv.x*0.3+(time*0.4)+(dg.y*0.4), 2.5), 0.0)*5.0;
-	col2 *= f;
-	vec3 c = col1 + col2;
+	float glow = max( ( mod( length( p ) - time * 1.5, 10.0 ) - 8.0 ) * 2.5, 0.0 );
+	if( dg.x < 1.2 ) glow = 0.0;
 
-	return vec4( c, sceneDist(p) );
+	return vec4( vec3( 0.2, 0.2, 0.2 ) + vec3( 0.2, 0.2, 1.0 ) * glow, sceneDist( p ) );
 	//return minVec4(
 	//	// 3 * 6 / 2 = 9
 	//	vec4( hsv2rgb(vec3( ( p.z + p.x ) / 9.0, 1.0, 1.0 ) ), sphereDist( p, 1.0 ) ),
@@ -279,7 +275,7 @@ vec3 getRayColor( vec3 origin, vec3 ray, out vec3 p, out vec3 normal, out bool h
 
 	}
 
-	return color - pow( clamp( 0.01 * depth + 0.005 * float(count), 0.0, 0.6 ), 2.0 );
+	return color - pow( clamp( -0.01 * depth + 0.005 * float(count), 0.0, 0.6 ), 2.0 );
 
 }
 
