--- a/tdf_glsl.html
+++ b/tdf_glsl.html
@@ -65,6 +65,8 @@ const float EPS = 0.01;
 const float OFFSET = EPS * 100.0;
 const float PI = 3.14159;
 
+vec3 cPos, cDir, sPos;
+
 const vec3 lightDir = vec3( -0.48666426339228763, 0.8111071056538127, -0.3244428422615251 );
 
 float PrBox2Df (vec2 p, vec2 b)
@@ -94,9 +96,9 @@ vec3 onRep( vec3 p, float interval ) {
 
 }
 
-float sphereDist( vec3 p, float r ) {
+float sphereDist( vec3 p, vec3 c, float r ) {
 
-	return length( onRep( p, 3.0 ) ) - r;
+	return length( p - c ) - r;
 
 }
 
@@ -139,19 +141,14 @@ vec3 hsv2rgb( vec3 c ) {
 
 float sceneDist( vec3 p ) {
 
-	//return ObjDf( p );
-	return MBoxDf( onRep( p, 7.0 ) );
-	//return MBoxDf( p );
-
-	//return min(
-	//	sphereDist( p, 1.0 ),
-	//	floorDist( p )
-	//);
+	return min(
+		sphereDist( p, sPos, 0.02 ),
+		MBoxDf( onRep( p, 7.0 ) )
+	);
 
 }
 
-vec2 circuit(vec2 p)
-{
+vec2 circuit(vec2 p) {
 	p = fract(p);
 	float r = 0.123;
 	float v = 0.0, g = 0.0;
@@ -196,7 +193,11 @@ vec4 sceneColor( vec3 p ) {
 	float glow = max( ( mod( length( p ) - time * 1.5, 10.0 ) - 8.0 ) * 2.5, 0.0 );
 	if( dg.x < 1.2 ) glow = 0.0;
 
-	return vec4( vec3( 0.2, 0.2, 0.2 ) + vec3( 0.2, 0.2, 1.0 ) * glow, sceneDist( p ) );
+	return minVec4(
+		vec4( vec3(0.0), sphereDist( p, sPos, 0.02 ) ),
+		vec4( vec3( 0.2, 0.2, 0.2 ) + vec3( 0.2, 0.2, 1.0 ) * glow, MBoxDf( onRep( p, 7.0 ) ) )
+	);
+
 	//return minVec4(
 	//	// 3 * 6 / 2 = 9
 	//	vec4( hsv2rgb(vec3( ( p.z + p.x ) / 9.0, 1.0, 1.0 ) ), sphereDist( p, 1.0 ) ),
@@ -275,7 +276,7 @@ vec3 getRayColor( vec3 origin, vec3 ray, out vec3 p, out vec3 normal, out bool h
 
 	}
 
-	return color - pow( clamp( -0.01 * depth + 0.005 * float(count), 0.0, 0.6 ), 2.0 );
+	return color + clamp( 0.2 * depth - 0.005 * float(count), -1.0, 1.0 );
 
 }
 
@@ -285,10 +286,9 @@ void main(void) {
 	vec2 p = ( gl_FragCoord.xy * 2.0 - resolution ) / min( resolution.x, resolution.y );
 
 	// camera and ray
-	vec3 cPos, cDir;
 	if ( true ) {
 		cPos  = vec3( -0.8185093402862549, 4.509979248046875, time );
-		cDir  = normalize( vec3( sin(time / 2.0 ), 0.5, 1.0 ) );
+		cDir  = normalize( vec3( sin(time * 0.5 ), 0.5, 1.0 ) );
 	} else {
 		cPos  = cameraPos;
 		cDir  = cameraDir;
@@ -297,6 +297,10 @@ void main(void) {
 	vec3 cUp   = normalize( cross( cSide, cDir ) );
 	float targetDepth = 1.3;
 	vec3 ray = normalize( cSide * p.x + cUp * p.y + cDir * targetDepth );
+
+	// sphere pos
+	float d = 0.2 + 0.1 * cos( time * 0.5 );
+	sPos = cPos + vec3( 0.0, 0.0, d );
 
 	vec3 color = vec3( 0.0 );
 	vec3 q, normal;
