--- a/tdf_glsl.html
+++ b/tdf_glsl.html
@@ -63,8 +63,11 @@ const float EPS = 0.01;
 const float OFFSET = EPS * 100.0;
 const float PI = 3.14159;
 
-vec3 cPos, cDir, sPos;
-vec3 lColor;
+vec3 cPos, cDir;
+vec3 sPos;
+float sSize;
+vec3 illuminationColor;
+float tempo;
 
 const vec3 lightDir = vec3( -0.48666426339228763, 0.8111071056538127, -0.3244428422615251 );
 
@@ -118,7 +121,7 @@ vec3 hsv2rgb( vec3 c ) {
 float sceneDist( vec3 p ) {
 
 	return min(
-		sphereDist( p, sPos, 0.02 ),
+		sphereDist( p, sPos, sSize ),
 		MBoxDf( onRep( p, 7.0 ) )
 	);
 
@@ -172,8 +175,8 @@ vec4 sceneColor( vec3 p ) {
 	if( dg.x < 1.1 ) glow = 0.0;
 
 	return minVec4(
-		vec4( 0.5 - 0.5 * cos( time * 0.2 ) * lColor, sphereDist( p, sPos, 0.02 ) ),
-		vec4( vec3( 0.2, 0.2, 0.2 ) + lColor * glow, MBoxDf( onRep( p, 7.0 ) ) )
+		vec4( 0.5 - 0.5 * cos( time * 0.2 ) * illuminationColor, sphereDist( p, sPos, sSize ) ),
+		vec4( vec3( 0.2, 0.2, 0.2 ) + illuminationColor * glow, MBoxDf( onRep( p, 7.0 ) ) )
 	);
 
 }
@@ -270,12 +273,16 @@ void main(void) {
 	float targetDepth = 1.3;
 	vec3 ray = normalize( cSide * p.x + cUp * p.y + cDir * targetDepth );
 
+	// tempo
+	tempo = sin( 4.0 * PI * time );
+
 	// sphere pos
 	float d = 0.2 + 0.1 * cos( time * 0.5 );
 	sPos = cPos + vec3( 0.0, 0.0, d );
+	sSize = 0.03 + 0.005 * tempo;
 
-	// light Color
-	lColor = hsv2rgb( vec3( time * 0.02 + 0.6, 1.0, 1.0 ) );
+	// Illumination Color
+	illuminationColor = hsv2rgb( vec3( time * 0.02 + 0.6, 1.0, 1.0 ) );
 
 	vec3 color = vec3( 0.0 );
 	vec3 q, normal;
@@ -292,6 +299,8 @@ void main(void) {
 		if ( !hit ) break;
 
 	}
+
+	color += 0.2 * tempo;
 
 	gl_FragColor = vec4(color, 1.0);
 
