--- a/tdf_glsl.html
+++ b/tdf_glsl.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-Copyright (c) 2015 gam0022
+Copyright (c) 2016 gam0022
 Released under the MIT license
 http://opensource.org/licenses/mit-license.php
 -->
@@ -52,6 +52,7 @@ http://opensource.org/licenses/mit-license.php
 precision mediump float;
 #endif
 
+// uniforms
 uniform float time;
 uniform vec2 mouse;
 uniform vec2 resolution;
@@ -59,48 +60,26 @@ uniform vec2 resolution;
 uniform vec3 cameraPos;
 uniform vec3 cameraDir;
 
+
+// consts
 const float EPS = 0.01;
 const float OFFSET = EPS * 100.0;
 const float PI = 3.14159;
 
+
+// globals
+const vec3 lightDir = vec3( -0.48666426339228763, 0.8111071056538127, -0.3244428422615251 );
 vec3 cPos, cDir;
 vec3 sPos;
 float sSize;
 vec3 illuminationColor;
 float tempo;
 
-const vec3 lightDir = vec3( -0.48666426339228763, 0.8111071056538127, -0.3244428422615251 );
 
 // distance functions
-float PrBox2Df (vec2 p, vec2 b) {
-
-  vec2 d = abs( p ) - b;
-  return min( max( d.x, d.y ), 0.0 ) + length( max( d, 0.0 ) );
-
-}
-
-float MBoxDf (vec3 p) {
-  vec4 q, q0;
-  const float mScale = 2.7;
-  const int nIter = 12;
-  q0 = vec4 (p, 1.);
-  q = q0;
-  for ( int n = 0; n < nIter; n++ ) {
-    q.xyz = clamp( q.xyz, -1.0, 1.0 ) * 2.0 - q.xyz;
-    q = q * mScale / clamp( dot( q.xyz, q.xyz ), 0.5, 1.0 ) + q0;
-  }
-  return length( q.xyz ) / abs( q.w );
-}
-
 vec3 onRep( vec3 p, float interval ) {
 
 	return mod( p, interval ) - 0.5 * interval;
-
-}
-
-float sphereDist( vec3 p, vec3 c, float r ) {
-
-	return length( p - c ) - r;
 
 }
 
@@ -110,11 +89,27 @@ vec4 minVec4( vec4 a, vec4 b ) {
 
 }
 
-vec3 hsv2rgb( vec3 c ) {
+float MBoxDist( vec3 p ) {
 
-	vec4 K = vec4( 1.0, 2.0 / 3.0, 1.0 / 3.0, 3.0 );
-	vec3 p = abs( fract( c.xxx + K.xyz ) * 6.0 - K.www );
-	return c.z * mix( K.xxx, clamp( p - K.xxx, 0.0, 1.0 ), c.y );
+  const float scale = 2.7;
+  const int n = 12;
+  vec4 q0 = vec4 (p, 1.);
+  vec4 q = q0;
+
+  for ( int i = 0; i < n; i++ ) {
+
+    q.xyz = clamp( q.xyz, -1.0, 1.0 ) * 2.0 - q.xyz;
+    q = q * scale / clamp( dot( q.xyz, q.xyz ), 0.5, 1.0 ) + q0;
+
+  }
+
+  return length( q.xyz ) / abs( q.w );
+
+}
+
+float sphereDist( vec3 p, vec3 c, float r ) {
+
+	return length( p - c ) - r;
 
 }
 
@@ -122,8 +117,18 @@ float sceneDist( vec3 p ) {
 
 	return min(
 		sphereDist( p, sPos, sSize ),
-		MBoxDf( onRep( p, 7.0 ) )
+		MBoxDist( onRep( p, 7.0 ) )
 	);
+
+}
+
+
+// color functions
+vec3 hsv2rgb( vec3 c ) {
+
+	vec4 K = vec4( 1.0, 2.0 / 3.0, 1.0 / 3.0, 3.0 );
+	vec3 p = abs( fract( c.xxx + K.xyz ) * 6.0 - K.www );
+	return c.z * mix( K.xxx, clamp( p - K.xxx, 0.0, 1.0 ), c.y );
 
 }
 
@@ -176,7 +181,7 @@ vec4 sceneColor( vec3 p ) {
 
 	return minVec4(
 		vec4( 0.5 - 0.5 * cos( time * 0.2 ) * illuminationColor, sphereDist( p, sPos, sSize ) ),
-		vec4( vec3( 0.2, 0.2, 0.2 ) + illuminationColor * glow, MBoxDf( onRep( p, 7.0 ) ) )
+		vec4( vec3( 0.2, 0.2, 0.2 ) + illuminationColor * glow, MBoxDist( onRep( p, 7.0 ) ) )
 	);
 
 }
@@ -273,7 +278,7 @@ void main(void) {
 	float targetDepth = 1.3;
 	vec3 ray = normalize( cSide * p.x + cUp * p.y + cDir * targetDepth );
 
-	// tempo
+	// music's tempo
 	tempo = sin( 4.0 * PI * time );
 
 	// sphere pos
