--- a/tdf_glsl.html
+++ b/tdf_glsl.html
@@ -256,7 +256,7 @@ vec3 getRayColor( vec3 origin, vec3 ray, out vec3 p, out vec3 normal, out bool h
 
 	}
 
-	return color + clamp( cos( time * 0.2 ) * 0.2 * depth - 0.005 * float(count), -1.0, 1.0 );
+	return color + clamp( sin( time * 0.2 - 0.5 * PI ) * 0.2 * depth - 0.005 * float(count), -1.0, 1.0 );
 
 }
 
