デバック表示を改行

--- a/tdf_glsl.html
+++ b/tdf_glsl.html
@@ -494,8 +494,8 @@ void main(void) {
 				var dir = camera.getWorldDirection();
 
 				document.getElementById( 'info' ).innerHTML = ""
-					+ pos.x + ", " + pos.y + ", " + pos.z + ". "
-					+ dir.x + ", " + dir.y + ", " + dir.z + ". ";
+					+ pos.x + ", " + pos.y + ", " + pos.z + "<br />"
+					+ dir.x + ", " + dir.y + ", " + dir.z;
 
 			}
 
