--- a/tdf_glsl.html
+++ b/tdf_glsl.html
@@ -57,9 +57,10 @@ uniform float time;
 uniform vec2 mouse;
 uniform vec2 resolution;
 
+// debug for camera
+uniform bool debugCamera;
 uniform vec3 cameraPos;
 uniform vec3 cameraDir;
-
 
 // consts
 const float EPS = 0.01;
@@ -299,12 +300,12 @@ void main(void) {
 	vec2 p = ( gl_FragCoord.xy * 2.0 - resolution ) / min( resolution.x, resolution.y );
 
 	// camera and ray
-	if ( true ) {
-		cPos  = vec3( -0.8185093402862549, 4.509979248046875, time );
-		cDir  = normalize( vec3( sin( time * 0.5 ), sin( time * 0.1 ), cos( time * 0.6 ) + 0.5 ) );
-	} else {
+	if ( debugCamera ) {
 		cPos  = cameraPos;
 		cDir  = cameraDir;
+	} else {
+		cPos  = vec3( -0.8185093402862549, 4.509979248046875, time );
+		cDir  = normalize( vec3( sin( time * 0.5 ), sin( time * 0.1 ), cos( time * 0.6 ) + 0.5 ) );
 	}
 	vec3 cSide = normalize( cross( cDir, vec3( 1.0, 1.0 ,0.0 ) ) );
 	vec3 cUp   = normalize( cross( cSide, cDir ) );
@@ -383,7 +384,7 @@ void main(void) {
 					window.open( canvas.toDataURL() );
 
 				},
-				camera: "Orbit",
+				camera: 'GLSL',
 				resolution: '256',
 			};
 
@@ -403,6 +404,7 @@ void main(void) {
 						resolution: { type: 'v2', value: new THREE.Vector2( config.resolution, config.resolution ) },
 						mouse: { type: 'v2', value: mouse },
 						time: { type: 'f', value: 0.0 },
+						debugCamera: { type: 'i', value: config.camera !== 'GLSL' },
 						cameraPos: { type: 'v3', value: camera.getWorldPosition() },
 						cameraDir: { type: 'v3', value: camera.getWorldDirection() },
 					},
@@ -439,7 +441,7 @@ void main(void) {
 
 				var gui = new dat.GUI();
 				gui.add( config, 'saveImage' ).name( 'Save Image' );
-				gui.add( config, 'camera', [ 'Orbit', 'Fly' ] ).name( 'Camera' );
+				gui.add( config, 'camera', [ 'GLSL', 'Orbit', 'Fly' ] ).name( 'Camera' );
 				gui.add( config, 'resolution', [ '256', '512', '800', 'full' ] ).name( 'Resolution' ).onChange( function( value ) {
 
 					if ( value !== 'full' ) {
@@ -483,6 +485,7 @@ void main(void) {
 				material.uniforms.resolution.value = new THREE.Vector2( canvas.width, canvas.height );
 				material.uniforms.mouse.value = mouse;
 				material.uniforms.time.value = timestamp * 0.001;
+				material.uniforms.debugCamera.value = config.camera !== 'GLSL';
 				material.uniforms.cameraPos.value = camera.getWorldPosition();
 				material.uniforms.cameraDir.value = camera.getWorldDirection();
 				renderer.render( scene, dummyCamera );
