--- a/tdf_glsl.html
+++ b/tdf_glsl.html
@@ -98,6 +98,7 @@ vec3 onRep( vec3 p, float interval ) {
 
 }
 
+// thanks to https://www.shadertoy.com/view/MdVGRc
 float MBoxDist( vec3 p ) {
 
   const float scale = 2.7;
@@ -141,6 +142,7 @@ vec3 hsv2rgb( vec3 c ) {
 
 }
 
+// thanks to http://glslsandbox.com/e#21290.5
 vec2 circuitPattern( vec2 p ) {
 
 	p = fract(p);
