--- a/shadow_test.html
+++ b/shadow_test.html
@@ -71,10 +71,6 @@ const float PI = 3.14159;
 // globals
 const vec3 lightDir = vec3( -0.48666426339228763, 0.8111071056538127, -0.3244428422615251 );
 vec3 cPos, cDir;
-vec3 sPos;
-float sSize;
-vec3 illuminationColor;
-float tempo;
 
 struct Intersect {
 	bool isHit;
@@ -87,9 +83,8 @@ struct Intersect {
 	vec3 color;
 };
 
-const int CIRCUIT_MATERIAL = 0;
-const int MIRROR_MATERIAL = 1;
-
+const int SPHERE_MATERIAL = 0;
+const int FLOOR_MATERIAL = 1;
 
 // distance functions
 vec3 onRep( vec3 p, float interval ) {
@@ -100,7 +95,8 @@ vec3 onRep( vec3 p, float interval ) {
 
 float sphereDist( vec3 p, float r ) {
 
-	return length( p ) - r;
+	vec3 c = vec3( 0.0, sin( time * 2.0 ) + 1.0, 0.0 );
+	return length( p - c ) - r;
 
 }
 
@@ -129,6 +125,23 @@ vec3 hsv2rgb( vec3 c ) {
 
 }
 
+float checkeredPattern( vec3 p ) {
+
+	float u = 1.0 - floor( mod( p.x, 2.0 ) );
+	float v = 1.0 - floor( mod( p.z, 2.0 ) );
+
+	if ( ( u == 1.0 && v < 1.0 ) || ( u < 1.0 && v == 1.0 ) ) {
+
+		return 0.2;
+
+	} else {
+
+		return 1.0;
+
+	}
+
+}
+
 Intersect minIntersect( Intersect a, Intersect b ) {
 
 	if ( a.distance < b.distance ) {
@@ -143,10 +156,10 @@ Intersect sceneIntersect( vec3 p ) {
 
 	Intersect a, b;
 	a.distance = sphereDist( p, 1.0 );
-	a.material = MIRROR_MATERIAL;
+	a.material = SPHERE_MATERIAL;
 
 	b.distance = floorDist( p );
-	b.material = CIRCUIT_MATERIAL;
+	b.material = FLOOR_MATERIAL;
 
 	return minIntersect( a, b );
 }
@@ -174,7 +187,7 @@ float getShadow( vec3 ro, vec3 rd ) {
 
 		if ( h < EPS ) return shadowCoef;
 
-		r = min( r, h * 16.0 / c );
+		r = min( r, h * 8.0 / c );
 		c += h;
 
 	}
@@ -192,7 +205,7 @@ Intersect getRayColor( vec3 origin, vec3 ray ) {
 	int count = 0;
 	Intersect nearest;
 
-	for ( int i = 0; i < 64; i++ ){
+	for ( int i = 0; i < 128; i++ ){
 
 		dist = sceneDist( p );
 		depth += dist;
@@ -212,13 +225,14 @@ Intersect getRayColor( vec3 origin, vec3 ray ) {
 		float specular = pow( clamp( dot( reflect( lightDir, nearest.normal ), ray ), 0.0, 1.0 ), 10.0 );
 		float shadow = getShadow( p + nearest.normal * OFFSET, lightDir );
 
-		if ( nearest.material == CIRCUIT_MATERIAL ) {
+		if ( nearest.material == FLOOR_MATERIAL ) {
 
-			nearest.color = vec3( 0.2, 0.2, 0.2 ) + illuminationColor *  diffuse + specular /* * max( 0.5, shadow )*/;
+			nearest.color = vec3( 0.9 ) * checkeredPattern( p ) * diffuse * max( 0.5, shadow );
 			
-		} else if ( nearest.material == MIRROR_MATERIAL ) {
+		} else if ( nearest.material == SPHERE_MATERIAL ) {
 
-			nearest.color = ( vec3( 1.0 ) - illuminationColor ) * diffuse * 0.5 + specular/* * max( 0.5, shadow )*/;
+			vec3 color = vec3( 1.0, 0.2, 0.2 );
+			nearest.color = color * diffuse * max( 0.5, shadow ) + specular;
 
 		}
 
@@ -231,7 +245,6 @@ Intersect getRayColor( vec3 origin, vec3 ray ) {
 
 	}
 
-	nearest.color += clamp( sin( time * 0.2 - 0.5 * PI ) * 0.2 * depth - 0.005 * float(count), -1.0, 1.0 );
 	return nearest;
 
 }
@@ -246,24 +259,13 @@ void main(void) {
 		cPos  = cameraPos;
 		cDir  = cameraDir;
 	} else {
-		cPos  = vec3( -0.8185093402862549, 4.509979248046875, time );
-		cDir  = normalize( vec3( sin( time * 0.5 ), sin( time * 0.1 ), cos( time * 0.6 ) + 0.5 ) );
+		cPos  = vec3( 0.0, 2.0, -4.0 );
+		cDir  = normalize( vec3( 0.0, -0.3, 1.0 ) );
 	}
-	vec3 cSide = normalize( cross( cDir, vec3( 1.0, 1.0 ,0.0 ) ) );
+	vec3 cSide = normalize( cross( cDir, vec3( 0.0, 1.0 ,0.0 ) ) );
 	vec3 cUp   = normalize( cross( cSide, cDir ) );
 	float targetDepth = 1.3;
 	vec3 ray = normalize( cSide * p.x + cUp * p.y + cDir * targetDepth );
-
-	// music's tempo
-	tempo = sin( 4.0 * PI * time );
-
-	// sphere pos
-	float d = 0.2 + 0.1 * cos( time * 0.5 );
-	sPos = cPos + vec3( 0.0, 0.0, d );
-	sSize = 0.03 + 0.005 * tempo;
-
-	// Illumination Color
-	illuminationColor = hsv2rgb( vec3( time * 0.02 + 0.6, 1.0, 1.0 ) );
 
 	vec3 color = vec3( 0.0 );
 	float alpha = 1.0;
@@ -274,15 +276,13 @@ void main(void) {
 		nearest = getRayColor( cPos, ray );
 
 		color += alpha * nearest.color;
-		alpha *= 0.7;
+		alpha *= 0.4;
 		ray = normalize( reflect( ray, nearest.normal ) );
 		cPos = nearest.position + nearest.normal * OFFSET;
 
-		if ( !nearest.isHit || nearest.material == CIRCUIT_MATERIAL ) break;
+		if ( !nearest.isHit || nearest.material != SPHERE_MATERIAL ) break;
 
 	}
-
-	color += 0.2 * tempo;
 
 	gl_FragColor = vec4(color, 1.0);
 
@@ -326,7 +326,7 @@ void main(void) {
 					window.open( canvas.toDataURL() );
 
 				},
-				camera: 'GLSL',
+				camera: 'Orbit',
 				resolution: '512',
 			};
 
@@ -337,9 +337,9 @@ void main(void) {
 
 				scene = new THREE.Scene();
 				camera = new THREE.PerspectiveCamera(35, 800/600);
-				camera.position = new THREE.Vector3( 0, 2, 0 );
+				camera.position.set( 0.0, 2.0, -4.0 );
 				dummyCamera = new THREE.Camera();
-				camera.lookAt( new THREE.Vector3( 0.0, 0.0, 0.0 ) );
+				camera.lookAt( camera.position.add( new THREE.Vector3( 0.0, -0.3, 1.0 ) ) );
 
 				geometry = new THREE.PlaneBufferGeometry( 2.0, 2.0 );
 				material = new THREE.RawShaderMaterial( {
@@ -378,7 +378,7 @@ void main(void) {
 				orbitControls.enableDamping = false;
 				orbitControls.dampingFactor = 0.015;
 				orbitControls.enableZoom = true;
-				orbitControls.zoomSpeed = 0.001;
+				orbitControls.zoomSpeed = 1;
 				orbitControls.rotateSpeed = 0.8;
 				orbitControls.autoRotate = false;
 				orbitControls.autoRotateSpeed = 0.0;
@@ -418,22 +418,11 @@ void main(void) {
 
 					orbitControls.update();
 
-				} else {
-
-					camera.position.set( mouse.x - 0.5, mouse.y * 4, timestamp );
-					camera.lookAt( new THREE.Vector3( 0.0, -0.3, 1.0 ).add( camera.position ) );
-
 				}
-
-				if ( camera.position.y < 0 ) camera.position.y = 0;
 
 				material.uniforms.resolution.value = new THREE.Vector2( canvas.width, canvas.height );
 				material.uniforms.mouse.value = mouse;
 				material.uniforms.time.value = timestamp * 0.001;
-				//material.uniforms.time.value = 147.81;
-				//material.uniforms.time.value = 62.68;
-				//material.uniforms.time.value = 93.69;
-				//material.uniforms.time.value = 67.86;
 				material.uniforms.debugCamera.value = config.camera !== 'GLSL';
 				material.uniforms.cameraPos.value = camera.getWorldPosition();
 				material.uniforms.cameraDir.value = camera.getWorldDirection();
