--- a/shadow_test.html
+++ b/shadow_test.html
@@ -62,6 +62,8 @@ uniform bool debugCamera;
 uniform vec3 cameraPos;
 uniform vec3 cameraDir;
 
+uniform float objY;
+
 // consts
 const float EPS = 0.01;
 const float OFFSET = EPS * 100.0;
@@ -95,7 +97,7 @@ vec3 onRep( vec3 p, float interval ) {
 
 float sphereDist( vec3 p, float r ) {
 
-	vec3 c = vec3( 0.0, sin( time * 2.0 ) + 1.0, 0.0 );
+	vec3 c = vec3( 0.0, objY, 0.0 );
 	return length( p - c ) - r;
 
 }
@@ -188,7 +190,7 @@ float getShadow( vec3 ro, vec3 rd ) {
 
 		if ( dist < EPS ) return 1.0 - shadowIntensity;
 
-		bright = min( bright, 8.0 * dist / depth );
+		bright = min( bright, 4.0 * dist / depth );
 		depth += dist;
 
 	}
@@ -328,6 +330,8 @@ void main(void) {
 
 				},
 				camera: 'Orbit',
+				objAutoMove: false,
+				objY: 0.0,
 				resolution: '512',
 			};
 
@@ -349,6 +353,7 @@ void main(void) {
 						mouse: { type: 'v2', value: mouse },
 						time: { type: 'f', value: 0.0 },
 						debugCamera: { type: 'i', value: config.camera !== 'GLSL' },
+						objY: { type: 'f', value: config.objY },
 						cameraPos: { type: 'v3', value: camera.getWorldPosition() },
 						cameraDir: { type: 'v3', value: camera.getWorldDirection() },
 					},
@@ -387,7 +392,9 @@ void main(void) {
 
 				var gui = new dat.GUI();
 				gui.add( config, 'saveImage' ).name( 'Save Image' );
-				gui.add( config, 'camera', [ 'GLSL', 'Orbit', 'Fly' ] ).name( 'Camera' );
+				gui.add( config, 'camera', [ 'GLSL', 'Orbit'/*, 'Fly'*/ ] ).name( 'Camera' );
+				gui.add( config, 'objAutoMove' ).name( 'Obj Auto Move' );
+				gui.add( config, 'objY', -1.0, 10.0 ).name( 'Obj Y' ).listen();
 				gui.add( config, 'resolution', [ '256', '512', '800', 'full' ] ).name( 'Resolution' ).onChange( function( value ) {
 
 					if ( value !== 'full' ) {
@@ -421,12 +428,19 @@ void main(void) {
 
 				}
 
+				if ( config.objAutoMove) {
+
+					config.objY = Math.sin( timestamp * 2.0 * 0.001 ) + 1.0;
+
+				}
+
 				material.uniforms.resolution.value = new THREE.Vector2( canvas.width, canvas.height );
 				material.uniforms.mouse.value = mouse;
 				material.uniforms.time.value = timestamp * 0.001;
 				material.uniforms.debugCamera.value = config.camera !== 'GLSL';
 				material.uniforms.cameraPos.value = camera.getWorldPosition();
 				material.uniforms.cameraDir.value = camera.getWorldDirection();
+				material.uniforms.objY.value = config.objY;
 				renderer.render( scene, dummyCamera );
 
 				stats.end();
@@ -436,9 +450,9 @@ void main(void) {
 				var dir = camera.getWorldDirection();
 
 				document.getElementById( 'info' ).innerHTML = ""
-					+ pos.x + ", " + pos.y + ", " + pos.z + "<br />"
-					+ dir.x + ", " + dir.y + ", " + dir.z + "<br />"
-					+ timestamp * 0.001;
+					+ "pos:" + pos.x + ", " + pos.y + ", " + pos.z + "<br />"
+					+ "dir:" + dir.x + ", " + dir.y + ", " + dir.z + "<br />"
+					+ "time:" + timestamp * 0.001;
 
 			}
 
