--- a/shadow_test.html
+++ b/shadow_test.html
@@ -62,6 +62,8 @@ uniform bool debugCamera;
 uniform vec3 cameraPos;
 uniform vec3 cameraDir;
 
+// other
+uniform int shadowType;
 uniform float objY;
 
 // consts
@@ -176,7 +178,51 @@ vec3 getNormal( vec3 p ) {
 
 }
 
-float getShadow( vec3 ro, vec3 rd ) {
+float getHardShadow( vec3 ro, vec3 rd ) {
+
+	float dist;
+	float depth = EPS;
+
+	float shadowIntensity = 0.7;
+
+	for ( int i = 0; i < 30; i++ ) {
+
+		dist = sceneDist( ro + rd * depth );
+
+		if ( dist < EPS ) return 0.0;
+
+		depth += dist;
+
+	}
+
+	return 1.0;
+
+}
+
+float getSoft1Shadow( vec3 ro, vec3 rd ) {
+
+	float dist;
+	float depth = EPS;
+	float bright = 1.0;
+
+	float shadowIntensity = 0.7;
+
+	for ( int i = 0; i < 30; i++ ) {
+
+		dist = sceneDist( ro + rd * depth );
+
+		if ( dist < EPS ) return 1.0 - shadowIntensity;
+
+		bright = min( bright, 4.0 * dist );
+		depth += dist;
+
+	}
+
+	return 1.0 - ( 1.0 - bright ) * shadowIntensity;
+
+}
+
+float getSoft2Shadow( vec3 ro, vec3 rd ) {
 
 	float dist;
 	float depth = EPS;
@@ -196,6 +242,24 @@ float getShadow( vec3 ro, vec3 rd ) {
 	}
 
 	return 1.0 - ( 1.0 - bright ) * shadowIntensity;
+
+}
+
+float getShadow( vec3 ro, vec3 rd ) {
+
+	if ( shadowType == 0 ) {
+
+		return getHardShadow( ro, rd );
+
+	} else if ( shadowType == 1 ) {
+
+		return getSoft1Shadow( ro, rd );
+
+	} else if (shadowType == 2) {
+
+		return getSoft2Shadow( ro, rd );
+
+	}
 
 }
 
@@ -330,7 +394,8 @@ void main(void) {
 
 				},
 				camera: 'Orbit',
-				objAutoMove: false,
+				shadowType: 2,
+				objAutoMove: true,
 				objY: 0.0,
 				resolution: '512',
 			};
@@ -353,9 +418,10 @@ void main(void) {
 						mouse: { type: 'v2', value: mouse },
 						time: { type: 'f', value: 0.0 },
 						debugCamera: { type: 'i', value: config.camera !== 'GLSL' },
-						objY: { type: 'f', value: config.objY },
 						cameraPos: { type: 'v3', value: camera.getWorldPosition() },
 						cameraDir: { type: 'v3', value: camera.getWorldDirection() },
+						shadowType: { type: 'i', value: config.shadowType },
+						objY: { type: 'f', value: config.objY },
 					},
 					vertexShader: document.getElementById( 'vertex_shader' ).textContent,
 					fragmentShader: document.getElementById( 'fragment_shader' ).textContent
@@ -393,6 +459,7 @@ void main(void) {
 				var gui = new dat.GUI();
 				gui.add( config, 'saveImage' ).name( 'Save Image' );
 				gui.add( config, 'camera', [ 'GLSL', 'Orbit'/*, 'Fly'*/ ] ).name( 'Camera' );
+				gui.add( config, 'shadowType', { Hard: 0, Soft1: 1, Soft2: 2 } );
 				gui.add( config, 'objAutoMove' ).name( 'Obj Auto Move' );
 				gui.add( config, 'objY', -1.0, 10.0 ).name( 'Obj Y' ).listen();
 				gui.add( config, 'resolution', [ '256', '512', '800', 'full' ] ).name( 'Resolution' ).onChange( function( value ) {
@@ -440,6 +507,7 @@ void main(void) {
 				material.uniforms.debugCamera.value = config.camera !== 'GLSL';
 				material.uniforms.cameraPos.value = camera.getWorldPosition();
 				material.uniforms.cameraDir.value = camera.getWorldDirection();
+				material.uniforms.shadowType.value = config.shadowType;
 				material.uniforms.objY.value = config.objY;
 				renderer.render( scene, dummyCamera );
 
