--- a/shadow.html
+++ b/shadow.html
@@ -253,11 +253,11 @@ float getShadow( vec3 ro, vec3 rd ) {
 
 		return getSoft1Shadow( ro, rd );
 
-	} else if ( shadowType == 2 ) {
+	} //else if ( shadowType == 2 ) {
 
 		return getSoft2Shadow( ro, rd );
 
-	}
+	//}
 
 }
 
