--- a/shadow.html
+++ b/shadow.html
@@ -71,7 +71,7 @@ uniform float shadowSharpness;
 uniform float objY;
 
 // consts
-const float EPS = 0.00001;
+const float EPS = 0.0001;
 const float OFFSET = EPS * 100.0;
 const float PI = 3.14159;
 
@@ -191,7 +191,7 @@ float getHardShadow( vec3 ro, vec3 rd ) {
 
 		dist = sceneDist( ro + rd * depth );
 
-		if ( dist < EPS ) return 1.0 - shadowIntensity;
+		if ( dist < EPS ) return shadowIntensity;
 
 		depth += dist;
 
@@ -211,14 +211,15 @@ float getSoft1Shadow( vec3 ro, vec3 rd ) {
 
 		dist = sceneDist( ro + rd * depth );
 
-		if ( dist < EPS ) return 1.0 - shadowIntensity;
+		if ( dist < EPS ) return shadowIntensity;
 
-		bright = min( bright, shadowSharpness * dist );
+		bright = min( bright, shadowSharpness * dist * 200.0 );
+
 		depth += dist;
 
 	}
 
-	return 1.0 - ( 1.0 - bright ) * shadowIntensity;
+	return shadowIntensity + ( 1.0 - shadowIntensity ) * bright;
 
 }
 
@@ -232,14 +233,14 @@ float getSoft2Shadow( vec3 ro, vec3 rd ) {
 
 		dist = sceneDist( ro + rd * depth );
 
-		if ( dist < EPS ) return 1.0 - shadowIntensity;
+		if ( dist < EPS ) return shadowIntensity;
 
 		bright = min( bright, shadowSharpness * dist / depth );
 		depth += dist;
 
 	}
 
-	return 1.0 - ( 1.0 - bright ) * shadowIntensity;
+	return shadowIntensity + ( 1.0 - shadowIntensity ) * bright;
 
 }
 
@@ -393,9 +394,9 @@ void main(void) {
 				},
 				camera: 'Orbit',
 
-				shadowType: 2,
-				shadowIntensity: 0.7,
-				shadowSharpness: 6.0,
+				shadowType: 1,
+				shadowIntensity: 0.3,
+				shadowSharpness: 8.0,
 
 				objAutoMove: true,
 				objY: 0.0,
@@ -470,7 +471,7 @@ void main(void) {
 				var shadowFolder = gui.addFolder('Shadow');
 				shadowFolder.add( config, 'shadowType', { Hard: 0, Soft1: 1, Soft2: 2 } ).name( 'Type');
 				shadowFolder.add( config, 'shadowIntensity', 0.0, 1.0 ).name( 'Intensity' );
-				shadowFolder.add( config, 'shadowSharpness', 0.0, 30.0 ).name( 'Sharpness' );
+				shadowFolder.add( config, 'shadowSharpness', 0.0, 100.0 ).name( 'Sharpness' );
 				shadowFolder.open();
 
 				var objFolder = gui.addFolder('Obj');
